# comfyui-dream-video-batches

./: .gitignore  LICENSE  README.md  __init__.py  calculate.py  camera.py  categories.py  config.json  cutandjoin.py  dreamtypes.py  generate.py  inputfields.py  install.py  loaders.py  node_list.json  output.py  prompting.py  pyproject.toml  shared.py  transitions.py  utility.py  wrapping.py
.github/workflows/: publish.yml
core/: __init__.py  batch_processing.py  config.py  dvb_image.py  err.py  framerate.py  frameset.py  memory.py  node_support.py  partial_prompt.py  statestore.py  utility.py  vector.py
examples/: blend-example.json  camera-roll-example.json  frame-blend.json  transitions.json
